# Multi_Tenant_Team_Task_API

./: README.md  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/routers/authentication/: endpoints.py
app/api/routers/user/: endpoints.py
app/core/: __init__.py  responses.py  settings.py
app/core/utilities/: __init__.py  utilities.py
app/db/: __init__.py  connection.py
app/db/tables/: __init__.py  users.py
app/models/: __init__.py  authentication_model.py  user.py  user_model.py
app/models/commons/: __init__.py  audit.py  error.py  token.py
app/routers/: __init__.py
app/routers/user/: endpoints.py
app/services/: __init__.py  authentication.py  user.py
