[project]
name = "multi-tenant-team-task-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.0",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
